# distros

./: .gitignore  README.md  metadata.toml  pyproject.toml
fedora/: README.md  fedora.py
fedora/tests/: test_main.py
