[project]
name = "distros"
version = "0.1.0"
description = "setup you linux distro"
authors = [{ name= "stephen",  email= "oketchs702@gmail.com" }]

dependencies = [
    
]

readme = "README.md"
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["distros/fedora"]
